Nutch Change Log

* NUTCH-2204 Remove junit lib from runtime (snagel)

* NUTCH-2201 Remove loops program from webgraph package (markus)

* NUTCH-1325 HostDB for Nutch (Gui Forget, markus, tejasp)

* NUTCH-2203 Suffix URL filter can't handle trailing/leading whitespaces (Jurian Broertjes via markus)

* NUTCH-2194 Run IndexingFilterChecker as simple Telnet server (markus)

* NUTCH-2196 IndexingFilterChecker to optionally normalize (markus)

* NUTCH-2195 IndexingFilterChecker to optionally follow N redirects (markus)

* NUTCH-2190 Protocol normalizer (markus)

* NUTCH-1838 Host and domain based regex and automaton filtering (markus)

* NUTCH-2178 DeduplicationJob to optionally group on host or domain (markus)

* NUTCH-1449 Optionally delete documents skipped by IndexingFilters (markus)

* NUTCH-2189 Domain filter must deactivate if no rules are present (markus)

* NUTCH-2182 Make reverseUrlDirs file dumper option hash the URL for consistency (joyce)

* NUTCH-2183 Improvement to SegmentChecker for skipping non-segments present in segments directory (lewismc)

* NUTCH-2180 FileDumper skips Corrupt Segments (Harshavardhan Manjunatha via lewismc)

* NUTCH-2042 parse-html increase chunk size used to detect charset (snagel)

* NUTCH-2172 index-more: document format of contenttype-mapping.txt (Nicola Tonellotto, snagel)

Nutch 1.11 Release 03/12/2015 (dd/mm/yyyy)
Release Report: http://s.apache.org/nutch11

* NUTCH-2176 Clean up of log4j.properties (markus)

* NUTCH-2107 plugin.xml to validate against plugin.dtd (snagel)

* NUTCH-2177 Generator produces only one partition even in distributed mode (jnioche, snagel)

* NUTCH-2158 Upgrade to Tika 1.11 (jnioche, snagel)

* NUTCH-2175 Typos in property descriptions in nutch-default.xml (Roannel Fernández Hernández via snagel)

* NUTCH-2069 Ignore external links based on domain (jnioche)

* NUTCH-2173 String.join in FileDumper breaks the build (joyce)

* NUTCH-2166 Add reverse URL format to dump tool (joyce)
